# ptp

./: .gitignore  README.md
brazil-aligned/: exploring.ipynb  exploring_editada.ipynb  extract.py  oi.py  organizing_sheet.ipynb  plots.py  requirements.txt  test_transform.py  transform.py  utils.py  visualization_performance_parties_years.html
brazil-aligned/data/interim/: data-editada-parquet-interim.parquet  data-parquet-editada-final-1.parquet  data_parquet_final_1.parquet
brazil-aligned/data/raw/: data-editada-parquet-raw.parquet  data-parquet-raw.parquet  link_to_master.txt
brazil-aligned/plots/aligned parties/: visualization_performance_aligned_parties_overall.html  visualization_performance_aligned_parties_years.html
brazil-aligned/plots/all parties/: visualization_performance_parties_overall.html  visualization_performance_parties_years.html
governments-complying/: exploring.ipynb  pyproject.toml  resumindo.md
painel-agency/: pyproject.toml
painel-agency/data/raw/: brazil-resp-rates-all-pres-min-bur.parquet  notes.md  painel-agency.parquet
painel-agency/notebooks/: joining_data.ipynb
painel-agency/src/: reading_data.py
